# workflow.rs

./: .clippy.toml  .cursorrules  .editorconfig  .gitignore  .lycheeignore  .pre-commit-config.yaml  .rust-analyzer  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cargo.toml.backup  IMPLEMENTATION_PLAN.md  LICENSE  LOG_OPTIMIZATION_ANALYSIS.md  Makefile  OPTIMIZATION_ANALYSIS.md  README.md  build-rust-analyzer.sh  create_pr.sh  run_new_tests.sh  rustfmt.toml  test_codeup  test_simplify  test_trait  test_trait_method
.cargo/: config.toml
.claude/: settings.json  settings.local.json
.cursor/rules/: README.md  README.mdc  development.md  development.mdc  document.md  document.mdc  overview.md  overview.mdc  sync.md  sync.mdc
.github/scripts/: build-release.sh  bump-version-and-pr.sh  check-and-increment-tag.sh  remove_xcb_deps.py  setup-linux-xcb-deps.sh  setup-xcb-build-env.sh
.github/workflows/: alpha-cleanup-reusable.yml  build-binaries-reusable.yml  ci.yml  code-quality-reusable.yml  comprehensive-check.yml  coverage-check.yml  doc-consistency-check.yml  doc-link-check.yml  document-check.yml  performance-check.yml  release-publish-reusable.yml  release.new.yml  release.yml
.workflow/: config.toml
Formula/: workflow.rb
analysis/: .gitkeep
analysis/impl/: .gitkeep
benches/: cli_performance.rs  core_operations.rs  network_operations.rs
docs/: ARCHITECTURE.md  BRANCH_PROTECTION_SETUP.md  CHECK_ARCHITECTURE.md  CHECK_REPORT.md  CLEAN_COMMAND_ANALYSIS.md  CODE_REFACTORING_ANALYSIS.md  CODE_STRUCTURE_ANALYSIS.md  COMPLETION_ARCHITECTURE.md  COMPLETION_IMPROVEMENT_PLAN.md  COMPLETION_REFACTOR_ANALYSIS.md  COMPLETION_ROLLBACK_REFACTOR_EVALUATION.md  CONFIG_ARCHITECTURE.md  FEATURE_EXTENSIONS.md  GITHUB_ACTIONS_SETUP.md  GIT_ARCHITECTURE.md  GIT_MODULE_REFACTOR_ANALYSIS.md  HOMEBREW.md  HTTP_ARCHITECTURE.md  IMPORT_STYLE_ANALYSIS.md  INSTALL_ARCHITECTURE.md  JIRA_ARCHITECTURE.md  LLM_ARCHITECTURE.md  LLM_IMPLEMENTATION.md  LLM_PLUGIN_ARCHITECTURE.md  LLM_PLUGIN_CURL.md  OPTIMIZATION_CHECKLIST.md  PLATFORM_PROVIDER_ABSTRACTION_ANALYSIS.md  PROXY_ARCHITECTURE.md  PR_ARCHITECTURE.md  PR_BASED_VERSION_UPDATE.md  PR_CALL_GRAPH.md  PR_CREATE_403_ERROR.md  PR_HTTP_CLIENT_ANALYSIS.md  PR_REFACTOR_GUIDE.md  PR_REFACTOR_STATUS.md  QK_ARCHITECTURE.md  QK_CALL_FLOW.md  README.md  REFACTOR_ANALYSIS_CONFIG_LIFECYCLE.md  ROLLBACK_ARCHITECTURE.md  (+9 more)
docs/analysis/: CODE_OPTIMIZATION_ANALYSIS.md  command-restructure-complete-analysis.md  missing-command-docs.md  push_spinner_issue.md
docs/architecture/: ARCHITECTURE.md  alias.md  architecture.md  branch.md  check-log.md  check.md  checksum.md  cli.md  commit.md  completion.md  concurrent.md  config.md  constants.md  dialog.md  format.md  fs.md  git.md  github.md  http.md  indicator.md  jira.md  lifecycle.md  llm.md  log.md  logger.md  mcp.md  migrate.md  pr.md  prompt.md  proxy.md  repo.md  rollback.md  settings.md  shell.md  stash.md  system.md  table.md  tag.md  template.md  tools.md  (+1 more)
docs/cursorrules/: README.md  development.md  development.mdc  document.md  document.mdc  overview.md  overview.mdc  sync.md  sync.mdc
docs/guidelines/: CARGO_BLOAT_GUIDELINES.md  CI_WORKFLOW_GUIDELINES.md  DEVELOPMENT_GUIDELINES.md  DOCUMENT_GUIDELINES.md  DOCUMENT_TIMESTAMP_GUIDELINES.md  GITHUB_SETUP_GUIDELINES.md  PRE_COMMIT_GUIDELINES.md  PR_PLATFORM_GUIDELINES.md  REVIEW_CLI_COMPLETION_GUIDELINES.md  REVIEW_CODE_GUIDELINES.md  REVIEW_DOCUMENT_GUIDELINES.md  REVIEW_GUIDELINES.md  REVIEW_TEST_CASE_GUIDELINES.md  TEMPLATE_GUIDELINES.md  TESTING_GUIDELINES.md  cargo-bloat.md  cargo_bloat.md  ci-workflow.md  ci_workflow.md  development.md  development_guidelines.md  document-timestamp.md  document.md  document_guidelines.md  github-setup.md  pr-platform.md  template.md  testing.md
docs/guides/: ICLOUD_STORAGE_GUIDE.md
docs/migration/: 1.4.8-to-1.4.9.md  1.5.6-to-1.5.7.md  README.md  qk-to-log-jira-migration.md
docs/requirement/: BACKPORT_VS_FORWARDPORT_GUIDE.md  PR_COMMANDS_COMPARISON.md  PR_INTEGRATE_COMMAND.md  PR_PORT_AMBIGUITY_ANALYSIS.md  PR_PORT_AND_SYNC_COMMANDS.md  PR_PORT_COMMAND.md  PR_PORT_COMMAND_NAMING_ANALYSIS.md  PR_PORT_MIGRATE_COMPARISON.md  PR_PORT_MIGRATE_TRANSPLANT_COMPARISON.md  PR_REBASE_COMMAND.md
docs/requirements/: ALIAS_SYSTEM.md  CACHE.md  CLEANUP_GUIDE.md  CLEANUP_SUMMARY.md  CODEBASE_ACCESS_STRATEGY.md  CONCURRENCY.md  CONFIG_VALIDATION_AND_IMPORT_EXPORT.md  CURSORRULES_ENGLISH_TODO.md  DOCUMENTS_STATUS.md  DOCUMENT_RENAME_TODO.md  GIT_WORKFLOW.md  HTTP_REQUEST_RECORDING_ANALYSIS.md  JIRA_COMMANDS.md  MITMPROXY_INTEGRATION_GUIDE.md  MITMPROXY_QUICK_START.md  PR_API_TEST_REQUIREMENTS.md  PR_TEST_ANALYSIS_REQUIREMENTS.md  PR_TEST_IMPLEMENTATION_PLAN.md  PR_TEST_OVERVIEW.md  PR_TEST_SCHEME_ANALYSIS.md  PR_UPDATE_HANG_ANALYSIS.md  QUICK_COVERAGE_MODULES.md  README.md  STASH_MANAGEMENT.md  STEP_3_PR_UPDATE_HANG_ANALYSIS.md  STEP_5_JIRA_COMMANDS.md  SUMMARIZE_CODE_CONTEXT_ANALYSIS.md  SUMMARIZE_TEST_PLAN_STEP_ANALYSIS.md  SUMMARIZE_TEST_STEP_ANALYSIS.md  TEMPLATE_SYSTEM.md  TEMPLATE_SYSTEM_FLOW.md  TEMPLATE_SYSTEM_USAGE.md  (+50 more)
homebrew/: Formula.template
make/: Makefile.analyze.mk  Makefile.bench.mk  Makefile.build.mk  Makefile.deps.mk  Makefile.lint.mk  Makefile.test.mk  Makefile.tools.mk
report/: .gitkeep
scripts/: README.md  add_ignored_test_docs.py  check-doc-timestamps.sh  cleanup-completed-docs.sh  install.ps1  install.sh  reorganize-docs.sh  uninstall.ps1  uninstall.sh
src/: lib.rs  main.rs
tests/: args_check.rs  completeness.rs  git.rs  github.rs  http_retry.rs  integration_test.rs  jira.rs  jira_helpers.rs  llm_client.rs  logger.rs  paths_integration.rs  pr_helpers.rs  rollback.rs  settings.rs  shell.rs  tracing.rs  ui_components.rs  ui_dialogs.rs  util.rs
(+1053 files in other folders)
