[package]
name = "workflow"
version = "1.4.8"
edition = "2021"
default-run = "workflow"

[lib]
name = "workflow"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4.5"
anyhow = "1.0"
duct = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
chrono = "0.4"
# UI Framework - 迁移到 ratatui
# colored = "2.1"        # 将被 ratatui 替代
# dialoguer = "0.11"      # 将被 ratatui 替代
# indicatif = "0.17"      # 将被 ratatui 替代
ratatui = "0.27"
crossterm = "0.28"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
atty = "0.2"
reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls"], default-features = false }
regex = "1.10"
open = "5.0"
zip = "0.6"
flate2 = "1.0"
walkdir = "2.4"
tar = "0.4"
sha2 = "0.10"
dirs = "5.0"

# clipboard 依赖：在 musl 和 Linux ARM64 目标上禁用（避免 XCB 依赖问题）
# Linux ARM64 交叉编译时，XCB 库在 Ubuntu 源中不可用，因此禁用 clipboard 功能
[target.'cfg(all(not(target_env = "musl"), not(all(target_arch = "aarch64", target_os = "linux", target_env = "gnu"))))'.dependencies]
clipboard = "0.5"

[[bin]]
name = "workflow"
path = "src/bin/workflow.rs"

[[bin]]
name = "install"
path = "src/bin/install.rs"

