[package]
name = "workflow"
version = "1.5.11"
edition = "2021"
default-run = "workflow"

[lib]
name = "workflow"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4.5"
color-eyre = "0.6"
duct = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.0", features = ["chrono"] }
serde-saphyr = "0.0.10"
toml = "0.8"
chrono = "0.4"
console = "0.15"
indicatif = "0.17"
inquire = "0.9"
dialoguer = "0.11"
fuzzy-matcher = "0.3"
tabled = "0.14"
reqwest = { version = "0.11", features = ["json", "blocking", "multipart", "rustls-tls"], default-features = false }
regex = "1.10"
open = "5.0"
zip = "0.6"
flate2 = "1.0"
walkdir = "2.4"
tar = "0.4"
sha2 = "0.10"
dirs = "5.0"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
handlebars = "5.1"

[dev-dependencies]
pretty_assertions = "1.4"
rstest = "0.18"
mockito = "1.2"
insta = { version = "1.38", features = ["json"] }

# clipboard 依赖：在 musl 和 Linux ARM64 目标上禁用（避免 XCB 依赖问题）
# Linux ARM64 交叉编译时，XCB 库在 Ubuntu 源中不可用，因此禁用 clipboard 功能
[target.'cfg(all(not(target_env = "musl"), not(all(target_arch = "aarch64", target_os = "linux", target_env = "gnu"))))'.dependencies]
clipboard = "0.5"

[[bin]]
name = "workflow"
path = "src/bin/workflow.rs"

[[bin]]
name = "install"
path = "src/bin/install.rs"

# Release 构建优化配置
[profile.release]
# 启用链接时优化（Link Time Optimization），可以显著减小二进制文件大小
lto = true
# 启用 strip，移除符号表和调试信息，减小二进制文件大小
strip = true
# 设置代码生成单元为 1，提高优化效果（但会增加编译时间）
codegen-units = 1
