[package]
name = "workflow"
version = "1.6.9"
edition = "2021"
rust-version = "1.89.0"
default-run = "workflow"

[lib]
name = "workflow"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4.5"
color-eyre = "0.6"
duct = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.0", features = ["chrono"] }
serde-saphyr = "0.0.10"
toml = "0.8"
chrono = "0.4"
console = "0.15"
indicatif = "0.17"
inquire = "0.9"
dialoguer = "0.11"
fuzzy-matcher = "0.3"
tabled = "0.14"
reqwest = { version = "0.11", features = ["json", "blocking", "multipart", "rustls-tls"], default-features = false }
regex = "1.10"
open = "5.0"
zip = "0.6"
flate2 = "1.0"
walkdir = "2.4"
tar = "0.4"
sha2 = "0.10"
dirs = "5.0"
base64 = "0.22"
fs2 = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
handlebars = "5.1"
git2 = "0.18"  # Git 操作库

[dev-dependencies]
pretty_assertions = "1.4"
rstest = "0.18"
mockito = "1.2"
assert_cmd = "2.0"      # CLI 命令测试
tempfile = "3.8"        # 临时文件和目录
serial_test = "3.2.0"
git2 = "0.18"           # Git 操作库 (用于测试环境)
criterion = { version = "0.5", features = ["html_reports"] }

# 测试分类features（用于分类管理被忽略的测试）
# 这些features允许选择性运行特定类型的测试
[features]
default = []
# 网络测试：需要真实网络连接的测试（如LLM API、GitHub API等）
network-tests = []
# 交互式测试：需要用户交互的测试（如dialog、form_builder等）
interactive-tests = []
# 性能测试：性能基准测试
performance-tests = []
# 权限测试：需要特殊权限的测试（如修改系统配置等）
permission-tests = []

# clipboard 依赖：在 musl 和 Linux ARM64 目标上禁用（避免 XCB 依赖问题）
# Linux ARM64 交叉编译时，XCB 库在 Ubuntu 源中不可用，因此禁用 clipboard 功能
[target.'cfg(all(not(target_env = "musl"), not(all(target_arch = "aarch64", target_os = "linux", target_env = "gnu"))))'.dependencies]
clipboard = "0.5"

[[bin]]
name = "workflow"
path = "src/bin/workflow.rs"

[[bin]]
name = "install"
path = "src/bin/install.rs"

[[bench]]
name = "core_operations"
harness = false

[[bench]]
name = "cli_performance"
harness = false

[[bench]]
name = "network_operations"
harness = false

# 独立测试目标配置
[[test]]
name = "completeness"
path = "tests/completion/completeness.rs"

# 测试覆盖率配置
# tarpaulin 会扫描所有代码，但我们应该排除以下内容：
# - src/bin/*: 二进制入口文件，通常只是调用库代码，不需要单独测试
# - tests/*: 测试文件本身不应该计入覆盖率
# - benches/*: 基准测试文件，用于性能测试，不是功能测试
# - src/*/mod.rs: mod.rs 文件通常只是模块声明，没有业务逻辑
# 注意：tarpaulin 0.34+ 使用 exclude-files 字段（不是 exclude）
[package.metadata.tarpaulin]
target-coverage = 80.0
exclude-files = ["src/bin/*", "tests/*", "benches/*", "src/*/mod.rs"]
output = ["Html", "Lcov", "Json"]
out = "coverage/"
run-types = ["Tests", "Doctests"]

# Release 构建优化配置
[profile.release]
# 启用链接时优化（Link Time Optimization），可以显著减小二进制文件大小
lto = true
# 启用 strip，移除符号表和调试信息，减小二进制文件大小
strip = true
# 设置代码生成单元为 1，提高优化效果（但会增加编译时间）
codegen-units = 1
